crates/plotnik-lib/tests/05-typegen/quantifiers/error_plus_internal_capture_needs_row.txt
Bad = {(identifier) @c}+
==== diagnostics ====
error: captures `@c` repeat with `+` but aren't collected into a list
 --> query.ptk:1:7
  |
1 | Bad = {(identifier) @c}+
  |       ^^^^^^^^^^^^^^^^^^
  |
help: add a row capture so each repeat becomes one element: `{...}+ @items`
